--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '11'
 
       - name: Cache SonarQube packages
@@ -37,5 +38,5 @@ jobs:
         run: |
           mvn clean verify sonar:sonar \
             -Dsonar.projectKey=ENADE \
-            -Dsonar.host.url=http://localhost:32768/:9000 \
+            -Dsonar.host.url=http://localhost:32768:9000 \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
