--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -38,5 +38,5 @@ jobs:
         run: |
           mvn clean verify sonar:sonar \
             -Dsonar.projectKey=ENADE \
-            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.host.url=http://localhost:32768/ \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
