--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -34,9 +34,9 @@ jobs:
 
       - name: Build and analyze
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.ENADE }}
         run: |
           mvn clean verify sonar:sonar \
             -Dsonar.projectKey=ENADE \
-            -Dsonar.host.url=http://localhost:32768/ \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${{ secrets.ENADE }}
