--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,11 +17,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       - name: Cache SonarQube packages
         uses: actions/cache@v3
@@ -38,5 +38,6 @@ jobs:
         run: |
           mvn clean verify sonar:sonar \
             -Dsonar.projectKey=ENADE \
+            -Dsonar.organization=mauricioreiis \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.ENADE }}
