--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
                     <shutdown>kill</shutdown> <!-- Use it if required-->
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
         </plugins>
         <finalName>${project.artifactId}##${project.version}</finalName>
     </build>
